--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,13 +15,13 @@ h1 {
   font-size: 2rem;
   font-weight: 700;
   line-height: 1.2;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1.25rem;
 }
 h2 {
   font-size: 1.5rem;
   font-weight: 600;
   line-height: 1.2;
-  margin-bottom: 0.75rem;
+  margin-bottom: 1.25rem;
 }
 h3 {
   font-size: 1.25rem;
@@ -33,17 +33,17 @@ h3 {
   line-height: 2rem;
 }
 #blogContent h1,
-#blogContent h2,
-#blogContent h3 {
+#blogContent h2 {
   border-bottom: 1px solid #e2e8f0;
   margin-top: 2rem;
   padding-bottom: 0.5rem;
 }
 
 html.light #blogContent h1,
-html.light #blogContent h2,
-html.light #blogContent h3 {
+html.light #blogContent h2 {
   border-bottom: 1px solid #4a5568;
+  margin-top: 2rem;
+  padding-bottom: 0.5rem;
 }
 
 #blogContent code {
@@ -64,4 +64,12 @@ html.light #blogContent h3 {
 
 html.light #blogContent a {
   @apply text-lime-700;
+}
+
+#blogContent img {
+  margin: 1rem auto;
+}
+
+#blogContent p {
+  word-break: keep-all;
 }
