image css update

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,6 +68,8 @@ html.light #blogContent a {
 
 #blogContent img {
   margin: 1rem auto;
+  max-height: 600px;
+  object-fit: contain;
 }
 
 #blogContent p {
